[package]
name = "packtrack"
description = "A simple CLI for tracking mail packages"
version = "2.2.1"
edition = "2024"
repository = "https://github.com/binnev/packtrack"
readme = "README.md"
license = "MIT"
exclude = [".venv", ".vscode", ".direnv"]

[dependencies]
reqwest = { version = "0.12.9", features = [
    "json",
    "rustls-tls", # because it can't find openssl on nixos...
], default-features = false } # disable other default features that rely on openssl
async-trait = "0.1.83"
chrono = { version = "0.4.38", features = ["serde"] }
futures = "0.3.31"
lazy_static = "1.5.0"
regex = "1.11.1"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.132"
tokio = { version = "1.41.1", features = ["full"] }
clap = { version = "4.5.20", features = ["derive"] }
log = "0.4.22"
env_logger = "0.11.5"
directories = "5.0.1"
enum-iterator = "2.1.0"
chrono-tz = { version = "0.10.0", features = ["serde"] }
derive_more = { version = "1.0.0", features = ["display", "from"] }
